leptos_macro/tests/ui/view/children_clone.stderr
error[E0277]: the trait bound `A: Clone` is not satisfied
  --> tests/ui/view/children_clone.rs:24:20
   |
23 | /     view! {
24 | |         <Component clone:a>
   | |                    ^^^^^^^ the trait `Clone` is not implemented for `A`
25 | |             <p />
26 | |         </Component>
27 | |     };
   | |_____- required by a bound introduced by this call
   |
help: consider annotating `A` with `#[derive(Clone)]`
   |
18 + #[derive(Clone)]
19 | struct A;
   |

error[E0277]: the trait bound `A: Clone` is not satisfied
  --> tests/ui/view/children_clone.rs:31:24
   |
29 | /     view! {
30 | |         <Slot>
31 | |             <Then slot clone:a>
   | |                        ^^^^^^^ the trait `Clone` is not implemented for `A`
32 | |                 <p/>
33 | |             </Then>
34 | |         </Slot>
35 | |     };
   | |_____- required by a bound introduced by this call
   |
help: consider annotating `A` with `#[derive(Clone)]`
   |
18 + #[derive(Clone)]
19 | struct A;
   |
